public enum MaterialChasis {
    ALUMINIO,
    ACERO
}
