public enum TipoLlanta {
    RADIAL,
    ALTO_DESEMPEÑO,
    NIEVE
}
